@@ -1,6 +1,7 @@
 package com.castelar.prontuario.config;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -9,8 +10,8 @@ import org.springframework.http.HttpMethod;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 
 import com.castelar.prontuario.repository.IUserRepository;
@@ -31,13 +32,13 @@ public class WebConfig {
 
 
     @Bean
-    public CorsFilter corsFilter(){
+    public CorsConfigurationSource corsConfigurationSource(){
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
 
         //Builder da configuração do CORS
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(Arrays.asList("http://localhost:4200/"));
+        config.setAllowedOrigins(List.of("http://localhost:4200/"));
         config.setAllowedHeaders(Arrays.asList(
             HttpHeaders.ACCEPT,
             HttpHeaders.CONTENT_TYPE,
@@ -54,13 +55,9 @@ public class WebConfig {
 
         source.registerCorsConfiguration("/**", config);
 
-        return new CorsFilter(source);
+        return source;
     }
 
-    /**
-     * 
-     * @return
-     */
     @Bean
     public UserDetailsService userDetailsService(){
         return username -> userRepository.findByLogin(username).orElseThrow(() -> new UsernameNotFoundException("User not found"));
